--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,6 +32,12 @@
         <activity
             android:name=".Profile"
             android:exported="true"/>
+        <activity
+            android:name=".ProfileSetting"
+            android:exported="true"/>
+        <activity
+            android:name=".LogOut"
+            android:exported="true"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
