--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MadChef"
         tools:targetApi="31">
         <activity
-            android:name=".MainActivity"
+            android:name=".LogIn"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,9 +24,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".LogIn"
+        <activity android:name=".MainActivity"
             android:exported="true"/>
         <activity android:name=".SignUp"
+            android:exported="true"/>
+        <activity android:name=".SearchMenu"
             android:exported="true"/>
 
         <activity
