--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         android:theme="@style/Theme.MadChef"
         tools:targetApi="31">
         <activity
-            android:name=".LogIn"
+            android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -24,15 +24,22 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".MainActivity"
+        <activity
+            android:name=".CookingBook2"
             android:exported="true"/>
         <activity android:name=".SignUp"
             android:exported="true"/>
         <activity android:name=".SearchMenu"
             android:exported="true"/>
-
         <activity
             android:name=".Profile"
+            android:exported="true"/>
+        <activity
+            android:name=".Profile2"
+            android:exported="true"/>
+
+        <activity
+            android:name=".Community2"
             android:exported="true"/>
         <activity
             android:name=".ProfileSetting"
