--- a/build.gradle
+++ b/build.gradle
@@ -13,3 +13,16 @@ plugins {
 task clean(type: Delete) {
     delete rootProject.buildDir
 }
+
+ext {
+    appCompatVersion = '1.5.1'
+    constraintLayoutVersion = '2.1.4'
+    coreTestingVersion = '2.1.0'
+    lifecycleVersion = '2.3.1'
+    materialVersion = '1.7.0'
+    roomVersion = '2.4.3'
+    // testing
+    junitVersion = '4.13.2'
+    espressoVersion = '3.5.0'
+    androidxJunitVersion = '1.1.2'
+}
