--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,13 +18,6 @@
         android:theme="@style/Theme.MadChef"
         tools:targetApi="31">
         <activity
-            android:name=".MealPlan2"
-            android:exported="false" >
-            <meta-data
-                android:name="android.app.lib_name"
-                android:value="" />
-        </activity>
-        <activity
             android:name=".LogIn"
             android:exported="true" >
             <intent-filter>
@@ -33,9 +26,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".CookingBook2"
-            android:exported="true" />
         <activity
             android:name=".SignUp"
             android:exported="true" />
@@ -46,10 +36,16 @@
             android:name=".Profile"
             android:exported="true" />
         <activity
-            android:name=".Profile2"
+            android:name=".AboutUserActivity"
             android:exported="true" />
         <activity
-            android:name=".Community2"
+            android:name=".CookingBook"
+            android:exported="true" />
+        <activity
+            android:name=".CBPreferenceActivity"
+            android:exported="true" />
+        <activity
+            android:name=".Community"
             android:exported="true" />
         <activity
             android:name=".ProfileSetting"
