--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -68,6 +68,8 @@
             android:exported="true"/>
         <activity android:name=".AddMealActivity"
             android:exported="true"/>
+        <activity android:name=".RecipeDetailActivity"
+            android:exported="true"/>
         <meta-data
             android:name="preloaded_fonts"
             android:resource="@array/preloaded_fonts" />
