--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,8 +4,8 @@
     package="com.example.madchef">
 
     <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
         android:allowBackup="true"
@@ -19,7 +19,7 @@
         tools:targetApi="31">
         <activity
             android:name=".LogIn"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -45,6 +45,9 @@
             android:name=".CBPreferenceActivity"
             android:exported="true" />
         <activity
+            android:name=".CBFavouriteContainer"
+            android:exported="true" />
+        <activity
             android:name=".Community"
             android:exported="true" />
         <activity
@@ -55,7 +58,7 @@
             android:exported="true" />
         <activity
             android:name=".DeleteUser"
-            android:exported="true"/>
+            android:exported="true" />
         <activity
             android:name=".meal_planning"
             android:exported="true" />
@@ -65,14 +68,19 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:exported="true"
-            android:theme="@style/Base.Theme.AppCompat"
-            />
-        <activity android:name=".post"
-            android:exported="true"/>
-        <activity android:name=".AddMealActivity"
-            android:exported="true"/>
-        <activity android:name=".RecipeDetailActivity"
-            android:exported="true"/>
+            android:theme="@style/Base.Theme.AppCompat" />
+        <activity
+            android:name=".post"
+            android:exported="true" />
+        <activity
+            android:name=".AddMealActivity"
+            android:exported="true" />
+        <activity
+            android:name=".RecipeDetailActivity"
+            android:exported="true" />
+        <activity
+            android:name=".filter"
+            android:exported="true" />
 
         <meta-data
             android:name="preloaded_fonts"
