--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -62,6 +62,14 @@
         <activity
             android:name=".MainActivity"
             android:exported="true" />
+        <activity android:name=".User1"
+            android:exported="true"/>
+        <activity android:name="User2"
+            android:exported="true"/>
+        <activity android:name=".User3"
+            android:exported="true"/>
+        <activity android:name="User4"
+            android:exported="true"/>
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:exported="true"
